..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.4rc1

New features:
..F....... [ZBXNEXT-1398] implemented flickerfree screen shadowing for old screen data (Eduard)
A.F....... [ZBX-1357] added initial Indonesian translation (Richlv)
..F....... [ZBXNEXT-1393] fixed global scripts font (Eduard)
.......PS. [ZBX-4638] added support of {HOST.HOST}, {HOST.NAME}, {HOST.IP}, {HOST.DNS} and {HOST.CONN} macros in "params" field for SSH, Telnet and DB monitor items (Sasha)
.....J.... [ZBX-4663] added possibility to use dots in JMX attribute names (dimir)
..F....... [ZBX-5556] action recovery message body can now be empty (Vedmak)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, Chinese (China), Chinese (Taiwan), Czech, French, German, Hungarian, Italian, Latvian, Polish, Slovak, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
A......... [ZBX-5111] fixed child trigger data reset after changes in parent trigger (Oleg)
A......... [ZBX-5742] fixed trigger order_result in item and item prototype (Oleg)
..F....... [ZBX-5754] fixed English strings in trigger expression helper (Oleg)
..F....... [ZBX-5700] added permission checks in frontend (Oleg)
..F....... [ZBX-5700] fixed error after image deleting (Oleg)
..F....... [ZBX-5700] fixed duplicates in audit log after deleting (Oleg)
..F....... [ZBX-5700] fixed spaces in audit log (Oleg)
..F....... [ZBX-4186] added permission checks in media types (Oleg)